--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,9 @@
         <item name="tabLayout">@color/adapter_color</item>
         <item name="android:textColor">@color/play_fragment_bars</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowEnterTransition">@android:transition/fade</item>
+        <item name="android:windowExitTransition">@android:transition/fade</item>
     </style>
 
     <style name="BlackTheme" parent="Theme.AppCompat.NoActionBar">
@@ -64,6 +67,9 @@
         <item name="colorAccent">@color/downloaded</item>
         <item name="android:textColor">@color/white</item>
         <item name="alertDialogTheme">@style/DialogDark</item>
+        <item name="android:windowActivityTransitions">true</item>
+        <item name="android:windowEnterTransition">@android:transition/fade</item>
+        <item name="android:windowExitTransition">@android:transition/fade</item>
     </style>
 
     <style name="SelectableItemTheme">
